[package]
name = "gndump"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.0", features = ["mysql"]}
diesel_codegen = {version = "0.16.1", features = ["mysql"]}