[package]
name = "gndump"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4", features = ["mysql", "chrono"]}
diesel_codegen = {version = "0.16", features = ["mysql"]}
dotenv = {version = "0.10.0"}
failure = {version = "0.1.6"}
url = {version = "1.7.2"}
csv = {version = "1.1.1"}
log = {version = "*"}
simple_logger = {version = "*"}
chrono = {version = "0.4"}
